hw2/expr-parse.output
Grammar

    0 $accept: e $end

    1 e: e PLUS t
    2  | t

    3 t: t TIMES f
    4  | f

    5 f: LPAREN e RPAREN
    6  | ID


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 6
PLUS (259) 1
TIMES (260) 3
LPAREN (261) 5
RPAREN (262) 5


Nonterminals, with rules where they appear

$accept (8)
    on left: 0
e (9)
    on left: 1 2, on right: 0 1 5
t (10)
    on left: 3 4, on right: 1 2 3
f (11)
    on left: 5 6, on right: 3 4


State 0

    0 $accept: . e $end

    ID      shift, and go to state 1
    LPAREN  shift, and go to state 2

    e  go to state 3
    t  go to state 4
    f  go to state 5


State 1

    6 f: ID .

    $default  reduce using rule 6 (f)


State 2

    5 f: LPAREN . e RPAREN

    ID      shift, and go to state 1
    LPAREN  shift, and go to state 2

    e  go to state 6
    t  go to state 4
    f  go to state 5


State 3

    0 $accept: e . $end
    1 e: e . PLUS t

    $end  shift, and go to state 7
    PLUS  shift, and go to state 8


State 4

    2 e: t .
    3 t: t . TIMES f

    TIMES  shift, and go to state 9

    $default  reduce using rule 2 (e)


State 5

    4 t: f .

    $default  reduce using rule 4 (t)


State 6

    1 e: e . PLUS t
    5 f: LPAREN e . RPAREN

    PLUS    shift, and go to state 8
    RPAREN  shift, and go to state 10


State 7

    0 $accept: e $end .

    $default  accept


State 8

    1 e: e PLUS . t

    ID      shift, and go to state 1
    LPAREN  shift, and go to state 2

    t  go to state 11
    f  go to state 5


State 9

    3 t: t TIMES . f

    ID      shift, and go to state 1
    LPAREN  shift, and go to state 2

    f  go to state 12


State 10

    5 f: LPAREN e RPAREN .

    $default  reduce using rule 5 (f)


State 11

    1 e: e PLUS t .
    3 t: t . TIMES f

    TIMES  shift, and go to state 9

    $default  reduce using rule 1 (e)


State 12

    3 t: t TIMES f .

    $default  reduce using rule 3 (t)
